[tool.poetry]
name = "pdfmerger"
version = "0.1.0"
description = "A quick cli merge pdfs"
authors = ["Arthur <arthur@chunai.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^3.8.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
merge_pdfs = "pdfmerger.pdf_utils:merge"
